--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,11 @@
 
-
 /*================================
 =            STANDARD            =
 ================================*/
 
 body {
 	width: 100%;
+	background: #efefef;
 	position: relative;
 }
 
@@ -14,28 +14,43 @@ body {
 	clear: both;
 }
 
+.caps {
+	text-transform: uppercase;
+}
+
 div.wrap {
 	width: 100%;
-	background: #efefef;
 	position: relative;
 	padding: 0;
 	margin: 0;
+}
+
+header, footer {
+	width: 100%;
+	background: #353535;
+}
+
+header {
+	padding-top: 1.0em;
+	padding-bottom: 1.0em;
+	margin-bottom: 2.50em;
 }
 
 h1 {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 3.0em;
 	font-weight: 700;
+	color: #f3c045;
 	text-align: center;
 	margin-top: 0;
-	margin-bottom: 0.750em;
+	margin-bottom: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p, a { color: #222222; }
+h2, h3, h4, h5, h6, p, a { color: #222222; }
 
 h2, h3, h4, h5, h6 {
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 600;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
 	text-transform: lowercase;
 	text-align: center;
 	margin-top: 0.50em;
@@ -49,7 +64,7 @@ h5 { font-size: 1.50em; }
 h6 { font-size: 1.250em; }
 
 p {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 1.0em;
 	font-weight: 400;
 	text-align: left;
@@ -59,16 +74,18 @@ p {
 }
 
 a {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 1.0em;
 	font-weight: 400;
 	text-decoration: underline;
 }
 
-section.hero {
-	width: 80%;
-	padding-top: 2.0em;
+section.hero, section.content, section.extraBacon {
 	padding-bottom: 2.750em;
+}
+
+section.hero, section.extraBacon {
+	width: 80%;
 	padding-left: 10%;
 	padding-right: 10%;
 }
@@ -77,6 +94,11 @@ section.content {
 	width: 100%;
 	position: relative;
 	margin: 0;
+}
+
+div.meat1, div.meat2, div.meat3 {
+	width: 100%;
+	display: block;
 }
 
 div.box {
@@ -110,6 +132,21 @@ div.linkWrap {
 div.box2 h2, div.box2 p, div.box2 a { color: #efefef; }
 div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
 
+footer {
+	padding-top: 1.50em;
+	padding-bottom: 1.50em;
+}
+
+footer p, footer a {
+	color: #f3c045;
+}
+
+footer p {
+	text-align: center;
+	margin-top: 0.50em;
+	margin-bottom: 0.50em;
+}
+
 /*-----  End of STANDARD  ------*/
 
 
@@ -119,7 +156,11 @@ div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
 
 @media only screen and (min-width: 768px) {
 
-	section.hero {
+	header {
+		margin-bottom: 3.50em;
+	}
+
+	section.hero, section.extraBacon {
 		width: 70%;
 		padding-left: 15%;
 		padding-right: 15%;
@@ -128,7 +169,6 @@ div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
 	div.box {
 		width: 50%;
 		float: left;
-		display: -moz-inline-stack;
 	}
 
 	div.box div {
@@ -146,7 +186,13 @@ div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
 
 @media only screen and (min-width: 960px) {
 
-
+	div.meat1, div.meat2, div.meat3 {
+		width: 33.33333334%;
+		float: left;
+		box-sizing: border-box;
+		padding-left: 2%;
+		padding-right: 2%;
+	}
 }
 
 /*-----  End of MIN-WIDTH 960PX  ------*/
@@ -162,23 +208,6 @@ div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
 		width: 25%;
 	}
 
-	div.box div {
-		max-height: 12.50em;
-	}
-
 }
 
 /*-----  End of MIN-WIDTH 1100PX  ------*/
-
-
-/*========================================
-=            MIN-WIDTH 1440PX            =
-========================================*/
-
-@media only screen and (min-width: 1440px) {
-
-
-
-}
-
-/*-----  End of MIN-WIDTH 1440PX  ------*/
