--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,13 +10,9 @@ body {
 }
 
 /* utility class for clearing floats */
-.clearfix {
-	clear: both;
-}
+.clearfix { clear: both; }
 
-.caps {
-	text-transform: uppercase;
-}
+.caps { text-transform: uppercase; }
 
 div.wrap {
 	width: 100%;
@@ -80,9 +76,7 @@ a {
 	text-decoration: underline;
 }
 
-section.hero, section.content, section.extraBacon {
-	padding-bottom: 2.750em;
-}
+section.hero, section.content, section.extraBacon { padding-bottom: 2.750em; }
 
 section.hero, section.extraBacon {
 	width: 80%;
@@ -94,11 +88,6 @@ section.content {
 	width: 100%;
 	position: relative;
 	margin: 0;
-}
-
-div.meat1, div.meat2, div.meat3 {
-	width: 100%;
-	display: block;
 }
 
 div.box {
@@ -117,9 +106,27 @@ div.box2 { background: #222222; }
 div.box3 { background: #7a7a7a; }
 div.box4 { background: #353535; }
 
-div.box div {
+div.box2 h2, div.box2 p, div.box2 a { color: #efefef; }
+div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
+
+div.box div.titleWrap { position: relative; }
+
+div.box div.closeWrap {
+	width: 25px;
+	height: 25px;
+	position: absolute;
+	top: 28%;
+	right: 0;
+}
+
+div.box div.closeWrap a { opacity: 0; }
+
+div.box2 div.closeWrap svg line { stroke: #efefef; }
+div.box4 div.closeWrap svg line { stroke: #b7b7b7; }
+
+div.box div.boxText {
 	max-height: 5.0em;
-	overflow: scroll;
+	overflow: hidden;
 }
 
 div.linkWrap {
@@ -129,17 +136,17 @@ div.linkWrap {
 	padding-bottom: 0.50em;
 }
 
-div.box2 h2, div.box2 p, div.box2 a { color: #efefef; }
-div.box4 h2, div.box4 p, div.box4 a { color: #b7b7b7; }
+div.meat1, div.meat2, div.meat3 {
+	width: 100%;
+	display: block;
+}
 
 footer {
 	padding-top: 1.50em;
 	padding-bottom: 1.50em;
 }
 
-footer p, footer a {
-	color: #f3c045;
-}
+footer p, footer a { color: #f3c045; }
 
 footer p {
 	text-align: center;
@@ -156,9 +163,7 @@ footer p {
 
 @media only screen and (min-width: 768px) {
 
-	header {
-		margin-bottom: 3.50em;
-	}
+	header { margin-bottom: 3.50em; }
 
 	section.hero, section.extraBacon {
 		width: 70%;
@@ -171,9 +176,7 @@ footer p {
 		float: left;
 	}
 
-	div.box div {
-		max-height: 8.50em;
-	}
+	div.box div.boxText { max-height: 8.50em; }
 
 }
 
@@ -204,9 +207,7 @@ footer p {
 
 @media only screen and (min-width: 1100px) {
 
-	div.box {
-		width: 25%;
-	}
+	div.box { width: 25%; }
 
 }
 
